<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_navigation_and_mapping</name>
  <version>0.0.1</version>
  <description>The goal is to use the turtlebot to map an environment and then navigate within the map using the slam_toolbox</description>

  <maintainer email="yael.bshalom@gmail.com">yael Ben Shalom</maintainer>
  <author email="yael.bshalom@gmail.com">yael Ben Shalom</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>
  <depend>turtlesim</depend> 

</package>
